--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Inferno App",
-  "name": "Create Inferno App Sample",
+  "short_name": "CalculaFlex",
+  "name": "Álcool ou gasolina? Descubra!",
   "icons": [
     {
       "src": "favicon.ico",
