--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,32 @@
   "name": "Álcool ou gasolina? Descubra!",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "images/128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "images/144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "images/192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "images/256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "images/512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+      "src": "favicon.ico",
+      "sizes": "16x16",
       "type": "image/png"
     }
   ],
