--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#3c82c4",
   "background_color": "#3c82c4"
