--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "inferno": "^3.9.0",
     "inferno-component": "^3.9.0",
-    "inferno-scripts": "4.2.0",
-    "vanilla-masker": "^1.2.0"
+    "inferno-scripts": "4.2.0"
   },
   "scripts": {
     "start": "inferno-scripts start",
